[gd_scene format=3 uid="uid://2e70cch2asa7"]

[ext_resource type="Script" uid="uid://dw8wj37x8sum5" path="res://main_menu.gd" id="1_06t4h"]

[node name="MainMenu" type="Control" unique_id=1401578875]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06t4h")

[node name="Background" type="ColorRect" parent="." unique_id=1443681852]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.1, 1)

[node name="MainScreen" type="CenterContainer" parent="." unique_id=1499575377]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MenuPanel" type="PanelContainer" parent="MainScreen" unique_id=1411037727]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="MenuMargin" type="MarginContainer" parent="MainScreen/MenuPanel" unique_id=948706309]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainScreen/MenuPanel/MenuMargin" unique_id=778439778]
layout_mode = 2

[node name="Title" type="Label" parent="MainScreen/MenuPanel/MenuMargin/VBoxContainer" unique_id=25379122]
layout_mode = 2
text = "GODOT CRAFT"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="MainScreen/MenuPanel/MenuMargin/VBoxContainer" unique_id=812362301]
layout_mode = 2
text = "Play"

[node name="SettingsButton" type="Button" parent="MainScreen/MenuPanel/MenuMargin/VBoxContainer" unique_id=1292774583]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="MainScreen/MenuPanel/MenuMargin/VBoxContainer" unique_id=1292215969]
layout_mode = 2
text = "Quit"

[node name="HSeparator" type="HSeparator" parent="MainScreen/MenuPanel/MenuMargin/VBoxContainer" unique_id=1256776128]
layout_mode = 2

[node name="PlayScreen" type="CenterContainer" parent="." unique_id=450335037]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="PlayScreen" unique_id=453826813]
custom_minimum_size = Vector2(800, 500)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PlayScreen/PanelContainer" unique_id=1834615306]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="PlayScreen/PanelContainer/VBoxContainer" unique_id=1831494518]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="CreateWorld" type="VBoxContainer" parent="PlayScreen/PanelContainer/VBoxContainer/TabContainer" unique_id=1551059779]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_tab_index = 0

[node name="NameInputUI" type="LineEdit" parent="PlayScreen/PanelContainer/VBoxContainer/TabContainer/CreateWorld" unique_id=2074298027]
layout_mode = 2
placeholder_text = "World Name"

[node name="SeedInputUI" type="LineEdit" parent="PlayScreen/PanelContainer/VBoxContainer/TabContainer/CreateWorld" unique_id=544322857]
layout_mode = 2
placeholder_text = "Seed (Optional)"

[node name="CreateButtonUI" type="Button" parent="PlayScreen/PanelContainer/VBoxContainer/TabContainer/CreateWorld" unique_id=1802251706]
layout_mode = 2
text = "Create World"

[node name="LoadWorld" type="HBoxContainer" parent="PlayScreen/PanelContainer/VBoxContainer/TabContainer" unique_id=1175420210]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_tab_index = 1

[node name="SaveListUI" type="ItemList" parent="PlayScreen/PanelContainer/VBoxContainer/TabContainer/LoadWorld" unique_id=587475676]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
size_flags_horizontal = 3

[node name="PreviewPanel" type="VBoxContainer" parent="PlayScreen/PanelContainer/VBoxContainer/TabContainer/LoadWorld" unique_id=1144291447]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="ThumbnailUI" type="TextureRect" parent="PlayScreen/PanelContainer/VBoxContainer/TabContainer/LoadWorld/PreviewPanel" unique_id=2132902293]
custom_minimum_size = Vector2(280, 160)
layout_mode = 2
expand_mode = 1
stretch_mode = 6

[node name="WorldInfoLabel" type="Label" parent="PlayScreen/PanelContainer/VBoxContainer/TabContainer/LoadWorld/PreviewPanel" unique_id=216959333]
layout_mode = 2
text = "Select a world"

[node name="HBoxContainer" type="HBoxContainer" parent="PlayScreen/PanelContainer/VBoxContainer/TabContainer/LoadWorld/PreviewPanel" unique_id=235369788]
layout_mode = 2

[node name="LoadButtonUI" type="Button" parent="PlayScreen/PanelContainer/VBoxContainer/TabContainer/LoadWorld/PreviewPanel/HBoxContainer" unique_id=88974228]
layout_mode = 2
text = "Load Selected"

[node name="DeleteButtonUI" type="Button" parent="PlayScreen/PanelContainer/VBoxContainer/TabContainer/LoadWorld/PreviewPanel/HBoxContainer" unique_id=644384187]
layout_mode = 2
text = "Delete"

[node name="PlayBackButton" type="Button" parent="PlayScreen/PanelContainer/VBoxContainer" unique_id=799843265]
layout_mode = 2
text = "Back"

[node name="SettingsScreen" type="CenterContainer" parent="." unique_id=811147518]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer2" type="PanelContainer" parent="SettingsScreen" unique_id=2136835760]
custom_minimum_size = Vector2(600, 500)
layout_mode = 2

[node name="SettingsMargin" type="MarginContainer" parent="SettingsScreen/PanelContainer2" unique_id=2062030769]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsScreen/PanelContainer2/SettingsMargin" unique_id=1044244205]
layout_mode = 2

[node name="SettingsTitle" type="Label" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer" unique_id=2047583811]
layout_mode = 2
text = "SETTINGS"
horizontal_alignment = 1

[node name="SettingsTabContainer" type="TabContainer" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer" unique_id=1341763615]
layout_mode = 2
current_tab = 0

[node name="General" type="VBoxContainer" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer" unique_id=375045705]
layout_mode = 2
metadata/_tab_index = 0

[node name="UsernameHBox" type="HBoxContainer" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/General" unique_id=884994089]
layout_mode = 2

[node name="UsernameLabelUI" type="Label" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/General/UsernameHBox" unique_id=723995222]
layout_mode = 2
text = "Username: 	"

[node name="UsernameInputUI" type="LineEdit" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/General/UsernameHBox" unique_id=1830627370]
layout_mode = 2
size_flags_horizontal = 3

[node name="SlimModelCheckBoxUI" type="CheckBox" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/General" unique_id=1261302249]
layout_mode = 2
text = "Slim Player Model"

[node name="CustomTextureHBox" type="HBoxContainer" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/General" unique_id=1987675511]
layout_mode = 2

[node name="CustomTextureLabelUI" type="Label" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/General/CustomTextureHBox" unique_id=1294653255]
layout_mode = 2
text = "Custom Texture Path: 	"

[node name="BrowseTextureButtonUI" type="Button" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/General/CustomTextureHBox" unique_id=432330336]
layout_mode = 2
text = "Browse"

[node name="Video" type="VBoxContainer" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer" unique_id=17307476]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="FullscreenCheckBoxUI" type="CheckBox" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Video" unique_id=1420771594]
layout_mode = 2
text = "Borderless Fullscreen"

[node name="RenderDistanceHBox" type="HBoxContainer" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Video" unique_id=154470430]
layout_mode = 2

[node name="RenderDistanceLabelUI" type="Label" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Video/RenderDistanceHBox" unique_id=1165319817]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Render Distance: 4"

[node name="RenderDistanceSliderUI" type="HSlider" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Video/RenderDistanceHBox" unique_id=202906176]
layout_mode = 2
size_flags_horizontal = 3
min_value = 2.0
max_value = 16.0
value = 4.0

[node name="FOVHBox" type="HBoxContainer" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Video" unique_id=595153767]
layout_mode = 2

[node name="FOVLabelUI" type="Label" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Video/FOVHBox" unique_id=1229382220]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "FOV: 75"

[node name="FOVSliderUI" type="HSlider" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Video/FOVHBox" unique_id=964104719]
layout_mode = 2
size_flags_horizontal = 3
min_value = 30.0
max_value = 110.0
value = 75.0

[node name="VSyncHBox" type="HBoxContainer" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Video" unique_id=253239378]
layout_mode = 2

[node name="VSyncLabelUI" type="Label" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Video/VSyncHBox" unique_id=1563079967]
layout_mode = 2
text = "VSync:"

[node name="VSyncCheckBoxUI" type="CheckBox" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Video/VSyncHBox" unique_id=673095432]
layout_mode = 2

[node name="ShadowsHBox" type="HBoxContainer" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Video" unique_id=1694464827]
layout_mode = 2

[node name="ShadowsLabelUI" type="Label" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Video/ShadowsHBox" unique_id=1987744801]
layout_mode = 2
text = "Shadows:"

[node name="ShadowsSliderUI" type="HSlider" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Video/ShadowsHBox" unique_id=1218978062]
layout_mode = 2
size_flags_horizontal = 3
max_value = 4.0

[node name="MSAAHBox" type="HBoxContainer" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Video" unique_id=711642503]
layout_mode = 2

[node name="MSAALabelUI" type="Label" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Video/MSAAHBox" unique_id=383300066]
layout_mode = 2
text = "Anti-Aliasing:"

[node name="MSAAOptionButtonUI" type="OptionButton" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Video/MSAAHBox" unique_id=1257122844]
layout_mode = 2

[node name="Audio" type="VBoxContainer" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer" unique_id=1797902647]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="MasterVolumeHBox" type="HBoxContainer" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Audio" unique_id=298282449]
layout_mode = 2

[node name="MasterVolumeLabelUI" type="Label" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Audio/MasterVolumeHBox" unique_id=1929000115]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Master Volume: 100%"

[node name="MasterVolumeSliderUI" type="HSlider" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Audio/MasterVolumeHBox" unique_id=270851162]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="BlocksVolumeHBox" type="HBoxContainer" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Audio" unique_id=1071578399]
layout_mode = 2

[node name="BlocksVolumeLabelUI" type="Label" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Audio/BlocksVolumeHBox" unique_id=1183959840]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Blocks Volume: 100%"

[node name="BlocksVolumeSliderUI" type="HSlider" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Audio/BlocksVolumeHBox" unique_id=659998643]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="DamageVolumeHBox" type="HBoxContainer" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Audio" unique_id=542174073]
layout_mode = 2

[node name="DamageVolumeLabelUI" type="Label" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Audio/DamageVolumeHBox" unique_id=133330325]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Damage Volume: 100%"

[node name="DamageVolumeSliderUI" type="HSlider" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Audio/DamageVolumeHBox" unique_id=1440604508]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="PickupVolumeHBox" type="HBoxContainer" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Audio" unique_id=531953347]
layout_mode = 2

[node name="PickupVolumeLabelUI" type="Label" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Audio/PickupVolumeHBox" unique_id=768867356]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Pickup Volume: 100%"

[node name="PickupVolumeSliderUI" type="HSlider" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer/SettingsTabContainer/Audio/PickupVolumeHBox" unique_id=947408720]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="SettingsBackButtonUI" type="Button" parent="SettingsScreen/PanelContainer2/SettingsMargin/VBoxContainer" unique_id=1992080723]
layout_mode = 2
text = "Back"

[node name="VersionLabel" type="Label" parent="." unique_id=1680041473]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -107.0
offset_top = -32.0
offset_right = -14.0
offset_bottom = -9.0
grow_horizontal = 0
grow_vertical = 0
text = "build 0.0.8.0"
